syntax = "proto3";

package greeter_pb;

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}

service HelloService {
	rpc SayHello (HelloRequest) returns (HelloResponse) {}
}
